fix(publish, preview): make wide tables not overflow viewport
This will render tables that overflow render in a scroll-container.
The issue accured in publish and preview so this should solve it on both
ends.

--- a/packages/common-assets/styles/scss/content.scss
+++ b/packages/common-assets/styles/scss/content.scss
@@ -243,3 +243,9 @@ a.fn {
   text-decoration: none;
   margin-left: 1rem;
 }
+
+.table-responsible {
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
